# agent-poc

./: .gitignore  pyproject.toml  skaffold.yaml
.devcontainer/: devcontainer.json
src/agent_poc/: app.py
